Полечены баги с картинками